# aircapitan

./: .gitignore  pyproject.toml  run_game.sh  run_let_robot_fly.sh
src/aircapitan/: quick_run.py
src/aircapitan/game/: game.py  robopilot_game.py
src/aircapitan/instruments/: base_instrument.py  data_recorder.py  dummy_event_poller.py  learn_simple.py
src/aircapitan/robo_pilots/: RoboBangBangRoll-olf.py  RoboBangBangRoll.py
src/aircapitan/sim/: planesim.py  sim_tags_cheatsheet.txt
src/aircapitan/test_cases/: rank_roll.py
src/aircapitan/unittests/: test_ai.py
